# mit-learn

./: .dockerignore  .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yarnrc.yml  AGENTS.md  Dockerfile  Dockerfile-async  Dockerfile-litellm  Dockerfile-nb  Dockerfile.watch  IMPLEMENTATION_SUMMARY.md  READABLE_ID_ANALYSIS.md  README-keycloak-learn.md  README-keycloak.md  README.md  RELEASE.rst  app.json  apt.txt  conftest.py  cypress.config.ts  docker-compose-notebook.yml  docker-compose.apps.yml  docker-compose.codespaces.yml  docker-compose.elasticsearch.base.yml  docker-compose.elasticsearch.single-node.yml  docker-compose.kc.services.yml  docker-compose.kc.yml  docker-compose.litellm.yml  docker-compose.opensearch.base.yml  docker-compose.opensearch.cluster.yml  docker-compose.opensearch.single-node.yml  docker-compose.services.yml  docker-compose.yml  drf_lint_baseline.json  generate_env.py  mitxonline_v0.yaml  package.json  (+5 more)
.devcontainer/: change_port_visibility.sh  devcontainer.json
.gemini/: styleguide.md
ai_chat/: agent.py  agents.py  agents_langgraph.py  agents_test.py  api.py  apps.py  assistant.py  assistant.yp  conftest.py  constants.py  consumers.py  factories.py  permissions.py  proxy.py  routing.py  schema.yaml  serializers.py  tools.py  urls.py  utils.py  views.py  views_test.py
articles/: api.py  api_test.py  apps.py  constants.py  factories.py  hooks.py  models.py  models_test.py  permissions.py  serializers.py  serializers_test.py  signals.py  signals_test.py  tasks.py  tasks_test.py  urls.py  validators.py  views.py  views_test.py
authentication/: api.py  api_test.py  decorators.py  middleware.py  middleware_test.py  models_test.py  urls.py  views.py  views_test.py
channels/: __init__.py  api.py  apps.py  factories.py  models.py  models_test.py  plugins.py  plugins_test.py  schema.py  serializers.py  serializers_test.py  urls.py  views.py  views_test.py
ckeditor/: serializers.py  urls.py
config/: litellm_config.yml  nginx.conf.erb
content_feedback/: admin.py  apps.py  constants.py  factories.py  models.py  serializers.py  urls.py  views.py  views_test.py
cypress/: README.md  tsconfig.json
docs/: articles-cdn-purge.md
e2e/: README.md  smoke.spec.ts
env/: app_vars.sh  backend.env  backend.local.example.env  codespaces.env  frontend.env  frontend.local.example.env  shared.env  shared.local.example.env
fixtures/: aws.py  common.py
frontends/: .eslintrc.js  .stylelintrc.yaml  README.md  jest-clear-next-public-env.ts  jest-isolate-env.ts  jest-shared-setup.ts  jest.config.ts  jest.jsdom.config.ts  jsdom-extended.ts  package.json  vitest-jest-compat.ts  vitest-shared-setup.ts  vitest.workspace.ts
kompose/: ai-cm0-configmap.yaml  ai-deployment.yaml  ai-service.yaml  backend-env-configmap.yaml  backend-local-env-configmap.yaml  celery-cm0-configmap.yaml  celery-deployment.yaml  db-deployment.yaml  db-service.yaml  django-media-persistentvolumeclaim.yaml  env-configmap.yaml  frontend-env-configmap.yaml  frontend-local-env-configmap.yaml  learn-ai-namespace.yaml  litellm-cm0-configmap.yaml  litellm-deployment.yaml  litellm-service.yaml  nginx-cm0-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  opensearch-data1-persistentvolumeclaim.yaml  opensearch-node-mitopen-1-deployment.yaml  opensearch-node-mitopen-1-service.yaml  pgdata-persistentvolumeclaim.yaml  qdrant-data-persistentvolumeclaim.yaml  qdrant-deployment.yaml  qdrant-service.yaml  redis-deployment.yaml  redis-service.yaml  shared-env-configmap.yaml  shared-local-env-configmap.yaml  tika-deployment.yaml  tika-service.yaml  watch-cm0-configmap.yaml  watch-deployment.yaml  watch-service.yaml  web-cm0-configmap.yaml  web-deployment.yaml  web-service.yaml
learning_channels/: __init__.py  admin.py  api.py  api_test.py  apps.py  conftest.py  factories.py  models.py  models_test.py  permissions.py  permissions_test.py  plugins.py  plugins_test.py  schema.py  serializers.py  serializers_test.py  signals.py  urls.py  views.py  views_test.py
learning_resources/: admin.py  api.py  conftest.py  constants.py  content_summarizer.py  content_summarizer_test.py  exceptions.py  factories.py  filters.py  filters_test.py  hooks.py  models.py  models_test.py  permissions.py  permissions_test.py  plugins_test.py  serializers.py  serializers_test.py  tasks.py  tasks_test.py  transforms.py  urls.py  utils.py  utils_test.py  views.py  views_learningpath_test.py  views_test.py  views_userlist_test.py
learning_resources_search/: api.py  api_test.py  connection.py  connection_test.py  constants.py  indexing_api.py  indexing_api_test.py  models.py  models_test.py  plugins.py  plugins_test.py  serializers.py  serializers_test.py  tasks.py  tasks_test.py  urls.py  utils.py  utils_test.py  views.py  views_test.py
load_testing/: .stylelintrc.yaml  README.md  auth.ts  channels.compare.ts  config.ts  learn.average-load.ts  learn.smoke.ts  learn.stress.ts  learn.ts  locustfile.py  package.json  tsconfig.json  utils.ts
main/: apps.py  aqueduct_settings.py  asgi.py  celery.py  constants.py  decorators.py  decorators_test.py  env_validator.py  factories.py  features.py  filters.py  otel_asgi_test.py  pagination.py  permissions.py  schema.py  serializers.py  settings.py  settings_ai.py  settings_aqueduct.py  settings_aqueduct_dev.py  settings_celery.py  settings_course_etl.py  settings_pluggy.py  settings_test.py  telemetry.py  test_env_validator.py  test_utils.py  urls.py  urls_healthcheck_test.py  utils.py  utils_test.py  views.py
news_events/: factories.py  filters_test.py  plugins.py  plugins_test.py  serializers.py  tasks.py  tasks_test.py  urls.py  views.py  views_test.py
nginx/: Dockerfile
ol_hubspot/: __init__.py  api.py  api_test.py  apps.py  constants.py  schema.py  urls.py  views.py  views_test.py
openapi/: apps.py  schema.py  settings_spectacular.py  urls.py
profiles/: admin.py  api.py  api_test.py  constants.py  factories.py  forms.py  models.py  plugins.py  plugins_test.py  serializers.py  serializers_test.py  tasks.py  tasks_test.py  urls.py  (+4 more)
(+1900 files in other folders)
