[project]
name = "mit-learn"
version = "0.71.0"
description = "Search index for use with other MIT applications."
authors = [{ name = "MIT ODL" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "BSD-3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django==4.2.30",
    "attrs>=25.0.0,<26",
    "base36>=0.1.1,<0.2",
    "beautifulsoup4>=4.8.2,<5",
    "boto3>=1.26.155,<2",
    "cairosvg==2.9.0",
    "celery>=5.3.1,<6",
    "celery-redbeat>=2.3.2,<3",
    "cffi>=2.0.0,<3",
    "configargparse>=1.7.1",
    "cryptography>=48.0.1,<49",
    "dateparser>=1.2.0,<2",
    "deepmerge>=2.0,<3",
    "dj-database-url>=3.0.0,<4",
    "dj-static>=0.0.6,<0.0.7",
    "django-anymail[mailgun]>=13.0,<14",
    "django-aqueduct[derivations,vault]>=0.9.0",
    "django-bitfield>=2.2.0,<3",
    "django-cache-memoize>=0.2.0,<0.3",
    "django-cors-headers>=4.0.0,<5",
    "django-filter>=2.4.0,<3",
    "django-guardian>=3.0.0,<4",
    "django-health-check>=3.24.0,<4",
    "django-imagekit>=6.0.0,<7",
    "django-ipware>=7.0.0,<8",
    "django-json-widget>=2.0.0,<3",
    "django-oauth-toolkit>=3.0.0,<4",
    "django-redis>=5.2.0,<7",
    "django-scim2>=0.19.1,<0.20",
    "django-server-status>=0.7.0,<0.8",
    "django-storages>=1.13.2,<2",
    "djangorestframework>=3.14.0,<4",
    "drf-jwt>=1.19.2,<2",
    "drf-nested-routers>=0.95.0,<0.96",
    "drf-spectacular>=0.29,<0.30",
    "feedparser>=6.0.10,<7",
    "google-api-python-client>=2.89.0,<3",
    "hubspot-api-client>=12.0.0,<13",
    "granian[reload]>=2.5.4,<3",
    "html2text>=2025.0.0,<2026",
    "html5lib>=1.1,<2",
    "ipython>=9.0.0,<10",
    "isodate>=0.7.2,<0.8",
    "jedi>=0.19.0,<0.20",
    "langchain>=1.3.9,<1.4",
    "litellm==1.84.0",
    "llama-index>=0.14.0,<0.15",
    "llama-index-llms-openai>=0.6.0,<0.7",
    "lxml>=6.0.0,<7",
    "markdown>=3.7,<4",
    "markdown2>=2.4.8,<3",
    "mitol-django-common>=2026.4.2,<2027",
    "mitol-django-scim>=2026.4.2,<2027",
    "mitol-django-observability>=2026.1.0,<2027",
    "named-enum>=1.4.0,<2",
    "nested-lookup>=0.2.25,<0.3",
    "nh3>=0.3.0,<0.4",
    "ocw-data-parser>=0.35.1,<0.36",
    "onnxruntime==1.24.4",
    "openai>=2.0.0,<3",
    "opensearch-dsl>=2.0.0,<3",
    "opensearch-py>=2.0.0,<3",
    "opentelemetry-instrumentation-celery>=0.52b0",
    "opentelemetry-instrumentation-django>=0.52b0",
    "opentelemetry-instrumentation-psycopg>=0.52b0",
    "opentelemetry-instrumentation-redis>=0.52b0",
    "opentelemetry-instrumentation-requests>=0.52b0",
    "pluggy>=1.3.0,<2",
    "posthog>=5.0.0,<6",
    "psycopg>=3.2.4,<4",
    "psycopg2>=2.9.6,<3",
    "pycountry>=24.6.1,<25",
    "pygithub>=2.0.0,<3",
    "pyparsing>=3.2.1,<4",
    "pytest-lazy-fixtures>=1.1.1,<2",
    "python-dateutil>=2.8.2,<3",
    "python-rapidjson>=1.8,<2",
    "pyyaml>=6.0.0,<7",
    # Minimum server version for the Query API (QueryResponse gRPC type): qdrant v1.7.0.
    # qdrant-client ~=1.18.0 targets qdrant server v1.18.x; deployed server is v1.18.2
    # (ol-infrastructure/src/bridge/lib/versions.py QDRANT_VERSION).
    # The prior ==1.18.0 pin blocked automatic pickup of future 1.18.x patch releases;
    # switching to ~= lets uv upgrade within 1.18.x when the qdrant team publishes a
    # client that resolves the gRPC QueryResponse DecodeError observed against server
    # v1.18.2 with cloud_inference=True + prefer_grpc=True.
    "qdrant-client[fastembed]~=1.18.0",
    "redis>=7.0.0,<8",
    "requests>=2.31.0,<3",
    "retry2>=0.9.5,<0.10",
    "selenium>=4.30.0,<5",
    "sentry-sdk>=2.25.1,<3",
    "social-auth-app-django>=5.2.0,<6",
    "social-auth-core[openidconnect]>=4.4.2,<5",
    "static3>=0.7.0,<0.8",
    "tika>=3.0.0,<4",
    "tiktoken>=0.12.0,<0.13",
    "tldextract>=5.0.0,<6",
    "toolz>=1.0.0,<2",
    "ulid-py>=1.0.0,<2",
    "urllib3>=2.0.0,<3",
    "wrapt>=1.14.1,<2",
    "youtube-transcript-api>=1.0.0,<1.1",
    "pypdfium2>=5.0.0,<6",
    "pyarrow>=24,<25",
    "django-zeal>=2.0.4,<3",
    "pdf2image>=1.17.0,<2",
    "opendataloader-pdf>=1.3.0,<2",
    "pymupdf>=1.26.6,<2",
    "opencv-python>=4.12.0.88,<5",
    "django-removals>=1.1.6,<2",
    "langchain-litellm>=0.5.1",
    "scikit-learn>=1.8.0",
    "gensim>=4.4.0",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
]

[dependency-groups]
dev = [
    "bpython>=0.26,<0.27",
    "ddt>=1.6.0,<2",
    "factory_boy>=3.3.0,<4",
    "faker>=38.0.0,<39",
    "ipdb>=0.13.13,<0.14",
    "moto>=5.0.0,<6",
    "nplusone>=1.0.0,<2",
    "pdbpp>=0.11.6,<0.12",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-django>=4.5.2,<5",
    "pytest-env>=1.0.0,<2",
    "pytest-freezegun>=0.4.2,<0.5",
    "pytest-mock>=3.10.0,<4",
    "pytest-repeat>=0.9.4",
    "responses>=0.25.0,<0.26",
    "ruff==0.14.14",
    "safety>=3.0.0,<4",
    "semantic-version>=2.10.0,<3",
    "freezegun>=1.4.0,<2",
    "pytest-xdist[psutil]>=3.6.1,<4",
    "anys>=0.3.0,<0.4",
    "locust>=2.31.2,<3",
    "traceback-with-variables>=2.1.1,<3",
    "mitol-drf-lint==2026.4.2",
]

[tool.aqueduct]
modules = [
    "main.settings_celery",
    "main.settings_course_etl",
    "main.settings_pluggy",
    "main.settings",
]
output = "main/aqueduct_settings.py"
include_envparser = true
class_name = "AqueductSettings"
extra = "allow"
# `enrich_url_types` (0.9.0 str -> AnyUrl promotion) is intentionally left OFF.
# It correctly excludes Django's relative-URL settings and pairs a str
# serializer for model_dump(), but it still promotes APP_BASE_URL (default
# None, promoted via the name-suffix fallback), whose stored value is then a
# pydantic.Url object — and this model's own `build_urls` validator consumes it
# with `urljoin(self.APP_BASE_URL, ...)`, which rejects non-str. Keeping the
# URL fields as plain str preserves the drop-in contract with no workarounds.
parity_model = "main.aqueduct_settings:AqueductSettings"
parity_legacy = "main.settings"
# Deliberate, documented divergences from main/settings.py. Every entry is a
# policy fix, a framework/harness artifact, or a model-only typed input — not a
# dropped value. Verified via `manage.py check_aqueduct_settings`.
parity_ignore = [
    # --- Deliberate policy / security fixes ---
    "SECRET_KEY",              # required in the model; legacy had an insecure default
    "WEBHOOK_SECRET",          # required in the model; legacy had an insecure default
    "AWS_ACCESS_KEY_ID",       # CRITICAL fix: legacy typed this bool (default False); model is str | None
    "AWS_SECRET_ACCESS_KEY",   # CRITICAL fix: legacy typed this bool (default False); model is str | None
    "BASE_DIR",                # computed identically, via os.path on this file
    # NOTE: DATABASES / DEFAULT_DATABASE_CONFIG / HEALTH_CHECK were previously
    # ignored here because Django's ConnectionHandler and django-health-check
    # inject extra dict keys at runtime; 0.9.0's parity check does a one-way
    # subset compare for dict settings, so they no longer diverge and were
    # dropped from this list.
    # --- Conditional / leaked module locals (legacy only sets these in a branch) ---
    "STORAGES",                # legacy sets STORAGES only under MITOL_USE_S3; model carries Django's default explicitly (the adapter injects every value)
    "OPTIONS",                 # a leaked local inside legacy's `if MITOL_USE_S3` block, not a real Django setting
    "IPWARE_PRIVATE_IP_PREFIX",# legacy sets this only under `if DEBUG`
    # --- Model-only typed inputs (legacy reads these inline, never as a module global) ---
    "DATABASE_URL",
    "REDISCLOUD_URL",
    "MITOL_DB_CONN_MAX_AGE",
    "MITOL_DB_DISABLE_SSL",
    "MITOL_DB_DISABLE_SS_CURSORS",
    "RUN_DATA_MIGRATIONS",
    "HEROKU_APP_NAME",
    "HEROKU_PARENT_APP_NAME",
    "NEWS_EVENTS_MEDIUM_NEWS_SCHEDULE_SECONDS",
    "NEWS_EVENTS_MITPE_EVENTS_SCHEDULE_SECONDS",
    "NEWS_EVENTS_MITPE_NEWS_SCHEDULE_SECONDS",
    "NEWS_EVENTS_OL_EVENTS_SCHEDULE_SECONDS",
    "NEWS_EVENTS_ARTICLES_NEWS_SCHEDULE_SECONDS",
    "NEWS_EVENTS_WEBSITE_CONTENT_NEWS_SCHEDULE_SECONDS",
    "SCRAPE_MARKETING_PAGES_SCHEDULE_SECONDS",
    "EMBED_NEW_RESOURCES_SCHEDULE_SECONDS",
    "EMBED_NEW_CONTENT_FILES_SCHEDULE_SECONDS",
    # --- Benign numeric type normalization ---
    # get_float() declares a float but returns its int default un-coerced when
    # the env var is unset; the model's float annotation normalizes it (3 -> 3.0).
    "DEFAULT_SEARCH_CONTENT_FILE_SCORE_WEIGHT",
    "DEFAULT_SEARCH_MAX_INCOMPLETENESS_PENALTY",
    "DEFAULT_SEARCH_MINIMUM_SCORE_CUTOFF",
    "SEARCH_PROGRAM_INDEX_BOOST",
    "SENTRY_PROFILES_SAMPLE_RATE",
    "SENTRY_TRACES_SAMPLE_RATE",
]

[tool.uv]
package = false
default-groups = "all"
override-dependencies = ["setuptools<80"]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 88
# main/aqueduct_settings.py carries machine-owned `aqueduct:generated` regions.
# 0.8.1 made the generator's output ruff-format-stable for the ~9 rule groups it
# validated against, but mit-learn selects a much broader set: `ruff check` flags
# 68 issues in the generated regions and `ruff format` would rewrite them (which
# then makes `generate_aqueduct_settings --check` report drift). Per the upstream
# note, extend-exclude remains the documented fallback for such rulesets.
extend-exclude = ["main/aqueduct_settings.py"]
lint.select = [
    "A",  # flake8-builtins
    # "AIR",  # Airflow
    # "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    # "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D",  # pydocstyle
    "DJ",  # flake8-django
    "DTZ",  # flake8-datetimez
    "E",  # Pycodestyle Error
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FA",  # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    # "FURB",  # refurb
    "G",  # flake8-logging-format
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    # "NPY",  # NumPy-specific rules
    # "PD",  # pandas-vet
    "PERF",  # Perflint
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",  # Pylint
    "PT",  # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "SLOT",  # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Pycodestyle Warning
    "YTT",  # flake8-2020
]
lint.ignore = [
    "B008",
    "B905",
    "D104",
    "D200",
    "D202",
    "D205",
    "D301",
    "D400",
    "N803",
    "N806",
    "N999",
    "PIE804",
    "PLC0415",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "RUF012",
    "UP007"
]

lint.typing-modules = ["colour.hints"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"django.contrib.auth.models.User".msg = "use get_user_model() or settings.AUTH_USER_MODEL"

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["ARG001", "E501", "S101", "PLR2004"]
"test_*.py" = ["ARG001", "E501", "S101", "PLR2004"]
"**/migrations/**" = ["ARG001"]
